[package]
name = "debug-bot"
version = "0.1.0"
authors = ["Dylan Hackworth <dhpf@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
[dependencies.serenity]
version = "0.9.0-rc.1"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]